# pingus-VITA

./: CMakeLists.txt  README.md
cmake/Platform/toolchains/: Vita.cmake  Wii.cmake
data/controller/: vita.scm
data/credits/: pingus.credits
data/translations/: bg.json  cs.json  da.json  de.json  es.json  fi.json  fr.json  hu.json  it.json  nb.json  nl.json  nn.json  pl.json  pt.json  pt_BR.json  ru.json  sq.json  sr.json  sv.json  th.json  tr.json  uk.json  zh_CN.json  zh_TW.json
sce_sys/livearea/contents/: template.xml
src/: main.cpp
src/editor/: generic_level_obj.cpp  inputbox.cpp  viewport.cpp
src/engine/display/: blitter.cpp  blitter.hpp  display.cpp  drawing_request.hpp  font.cpp  framebuffer.hpp  screenshot.cpp  screenshot.hpp  sdl_framebuffer.cpp  sdl_framebuffer.hpp  sdl_framebuffer_surface_impl.cpp  sdl_framebuffer_surface_impl.hpp  sprite_impl.cpp  sprite_impl.hpp  surface.cpp
src/engine/display/opengl/: opengl_framebuffer.cpp  opengl_framebuffer.hpp  opengl_framebuffer_surface_impl.cpp  opengl_framebuffer_surface_impl.hpp
src/engine/gui/: group_component.cpp  gui_manager.cpp  gui_manager.hpp
src/engine/input/: control.hpp  controller.cpp  controller.hpp  controller_description.cpp  core_driver.cpp  event.hpp  manager.cpp  sdl_driver.cpp  sdl_driver.hpp
src/engine/screen/: gui_screen.cpp  gui_screen.hpp  screen_manager.cpp  screen_manager.hpp
src/engine/sound/: sound_real.cpp  sound_real.hpp  sound_res_mgr.hpp
src/engine/system/: sdl_system.cpp  sdl_system.hpp
src/math/: color.hpp  rect.hpp
src/pingus/: collision_mask.cpp  config_manager.cpp  config_manager.hpp  fps_counter.cpp  global_event.cpp  global_event.hpp  globals.cpp  ground_map.cpp  levelset.cpp  options.cpp  options.hpp  pingu.cpp  pingu_action.cpp  pingus_demo.cpp  pingus_level.cpp  pingus_main.cpp  plf_res_mgr.cpp  plf_res_mgr.hpp  prefab_file.cpp  server_event.cpp  state_sprite.cpp  world.cpp  worldobj.cpp  worldobj.hpp  worldobj_factory.cpp
src/pingus/actions/: boarder.cpp
src/pingus/components/: playfield.cpp  smallmap.cpp  smallmap.hpp
src/pingus/movers/: linear_mover.cpp
src/pingus/screens/: level_menu.cpp  option_menu.cpp  option_menu.hpp  pingus_menu.cpp  pingus_menu.hpp
src/pingus/worldmap/: dot.cpp  dot.hpp  dot_factory.cpp  level_dot.cpp  level_dot.hpp  story_dot.cpp  story_dot.hpp  worldmap.cpp  worldmap.hpp  worldmap_screen.cpp  worldmap_screen.hpp
src/pingus/worldobjs/: solid_color_background.hpp  starfield_background.hpp  surface_background.cpp  surface_background.hpp
src/util/: command_line_generic.cpp  file_reader.cpp  file_reader.hpp  i18n.cpp  i18n.hpp  memory_pool.hpp  overrride_file_reader.cpp  string_util.hpp  system.cpp  vita.cpp  vita.hpp
